@@ -1,3 +1,8 @@
+2009-03-12  Curtis Gedak  <gedakc@gmail.com>
+
+	* include/Utils.h,
+	  src/Utils.cc: Added tokenize() and file_exists() methods.
+
 2009-02-27  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/GParted_Core.cc: Enabled type checking (const instead of #define)
